--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,4 +1,22 @@
 {% extends "index.html" %}
 {% block body %}
+{% include "header.html" %}
+<div class="line-separator"></div>
+
 <p><a href="admin">admin</a></p>
+<p><a href="admin/login">login</a></p>
+
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="col-md-3 left_menu">
+      <!--Sidebar content-->
+    </div>
+    <div class="col-md-6 content">
+      <!--Body content-->
+    </div>
+    <div class="col-md-3 right_menu">
+      <!--Body content-->
+    </div>
+  </div>
+</div>
 {% endblock %}
