Changed editor style

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <br>
-    <form><textarea id="wysihtml5-textarea" placeholder="Enter your text ..." autofocus></textarea></form>
+    <form><textarea class="editor" id="wysihtml5-textarea" placeholder="Enter your text ..." autofocus></textarea></form>
 </div>
 <script>
 var editor = new wysihtml5.Editor("wysihtml5-textarea", { // id of textarea element
