--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,22 +1,39 @@
 {% extends "index.html" %}
-{% block body %}
-{% include "header.html" %}
-<div class="line-separator"></div>
 
-<p><a href="admin">admin</a></p>
-<p><a href="admin/login">login</a></p>
+{% block head %}
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/menu.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/slideshow.css') }}">
+
+
+<script src="{{ url_for('static', filename='wysihtml5/parser_rules/advanced.js') }}"></script>
+{% endblock %}
+
+{% block body %}
+
+{% include "header.html" %}
+
+<div class="line-separator"></div>
+<div class="header_sep"></div>
+<div>
+    <p class="inline"><a href="admin">admin</a></p> |
+    <p class="inline"><a href="admin/login">login</a></p>
+</div>
 
 <div class="container-fluid">
-  <div class="row-fluid">
-    <div class="col-md-3 left_menu">
-      <!--Sidebar content-->
+    <div class="row-fluid">
+        <div class="col-md-2 container left_menu">
+            {% include "menu.html" %}
+        </div>
+
+        <div class="col-md-6 content">
+            <h1>Content</h1>
+        </div>
+
+        <div class="col-md-offset-1 col-md-3 right_menu">
+            <h1>News</h1>
+        </div>
     </div>
-    <div class="col-md-6 content">
-      <!--Body content-->
-    </div>
-    <div class="col-md-3 right_menu">
-      <!--Body content-->
-    </div>
-  </div>
 </div>
 {% endblock %}
