--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,9 @@
 {% extends "index.html" %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
+
 {% block body %}
 <div class="container">
     <form class="form-login">
