--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -11,7 +11,7 @@
 
     <li><a href="#">Video</a></li>
     <li><a href="#">Welcome</a></li>
-    <li><a href="#">Programme</a></li>
+    <li><a href="http://www.easychair.org/smart-program/PSI2015/">Programme</a></li>
     <li><a href="#">Keynote Speakers</a></li>
     <li><a href="#">Accepted Papers</a></li>
     <li><a href="#">Call for paper (PDF)</a></li>
