Added new right menu

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -27,12 +27,36 @@
             {% include "menu.html" %}
         </div>
 
-        <div class="col-md-6 content">
+        <div class="col-md-7 content">
             <h1>Content</h1>
         </div>
 
-        <div class="col-md-offset-1 col-md-3 right_menu">
-            <h1>News</h1>
+        <div class="col-md-3">
+            <div class="container-fluid right_menu">
+                <h1>News</h1>
+                <span>asd asd asd</span><br>    
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br><br>    
+            </div>
+            <br>
+            <div class="container-fluid right_menu">
+                <h1>Events</h1>             
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>   
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>   
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br>
+                <span>asd asd asd</span><br><br>
+            </div>
+
         </div>
     </div>
 </div>
