--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -18,7 +18,13 @@
 <div class="header_sep"></div>
 <div>
     <p class="inline"><a href="admin">admin</a></p> |
-    <p class="inline"><a href="admin/login">login</a></p>
+    {% if not session.logged_in %}
+    <a href="auth/login">log in</a>
+    {% else %}
+    <a href="auth/logout">log out</a>
+    {% endif %}
+    <!--<p class="inline"><a href="auth/login">login</a></p>-->
+    <!--<p class="inline"><a href="auth/logout">logout</a></p>-->
 </div>
 
 <div class="container-fluid">
