--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,6 +18,11 @@
         <h2 class="form-login-heading">Please login</h2>
             {{ signin_form.username(class="form-control", placeholder="Username") }}
             {{ signin_form.password(class="form-control", placeholder="Password") }}
+            <div class="checkbox">
+                <label>
+                    {{ signin_form.remember_me() }} Remember me
+                </label>
+            <div>
         <button class="btn btn-lg btn-default btn-block" type="submit">Login</button>
     </form>
 </div>
