--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col-md-7 content">
-            <h1>Content</h1>
+            <h1>_(u'A simple string')</h1>
 
             <ul>
                 {% for entry in entries %}
