--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,14 +6,6 @@
 
 {% block body %}
 <div class="container">
-    <!--<form class="form-login" method="post" action="process_form">-->
-        <!--<h2 class="form-login-heading">Please login</h2>-->
-        <!--<label for="inputEmail" class="sr-only">Email address</label>-->
-        <!--<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>-->
-        <!--<label for="inputPassword" class="sr-only">Password</label>-->
-        <!--<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>-->
-        <!--<button class="btn btn-lg btn-default btn-block" type="submit">Login</button>-->
-    <!--</form>-->
     <form action="login" class="form-login" method="POST">
         <h2 class="form-login-heading">Please login</h2>
             {{ signin_form.username(class="form-control", placeholder="Username") }}
@@ -22,7 +14,7 @@
                 <label>
                     {{ signin_form.remember_me() }} Remember me
                 </label>
-            <div>
+            </div>
         <button class="btn btn-lg btn-default btn-block" type="submit">Login</button>
     </form>
 </div>
