Added video page

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -9,7 +9,7 @@
         </ul>
     </li>
 
-    <li><a href="#">Video</a></li>
+    <li><a href="{{ url_for('main.video') }}">Video</a></li>
     <li><a href="#">Welcome</a></li>
     <li><a href="http://www.easychair.org/smart-program/PSI2015/">Programme</a></li>
     <li><a href="#">Keynote Speakers</a></li>
