--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,7 +1,7 @@
 .content
 {
-    height: 600px;
-    background: #C6BAE0;
+    min-height: 600px;
+    /*background: #C6BAE0;*/
 }
 
 .left_menu
@@ -20,6 +20,52 @@
     display: inline;
 }
 
-.header_sep {
-   content:url(/static/images/header_sep.png);
-}​
+.header_sep
+{
+    content: url("/static/images/header_sep.png");
+}
+
+.b-images
+{
+    display: inline;
+}
+
+.b-images
+{
+    display: inline;
+}
+
+.b-images img
+{
+    cursor: pointer;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+
+    margin: 10px 4px 10px 4px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(52, 50, 109, 0.97);
+    -moz-box-shadow:    0px 0px 15px 0px rgba(52, 50, 109, 0.97);
+    box-shadow:         0px 0px 15px 0px rgba(52, 50, 109, 0.97);
+}
+
+.b-images img:hover
+{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+
+}
+
+.wrapper 
+{
+    position:relative;
+    top:-20px;
+    right:5px;
+    text-align:right;
+    display:block;
+}
