--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,64 @@
-<!doctype html>
-<title>Flask</title>
+{% extends "base.html" %}
 
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap/css/bootstrap-theme.min.css') }}">
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/menu.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/slideshow.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='video-js/video-js.css') }}">
 
-<script src="{{ url_for('static', filename='js/jquery-2.1.3.min.js') }}"></script>
-<script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+<script src="{{ url_for('static', filename='video-js/video.js') }}"></script>
+<script src="{{ url_for('static', filename='js/vjs.youtube.js') }}"></script>
+{% endblock %}
 
-{% block head %}{% endblock %}
+{% block body %}
 
-<body>
-    {% block body %}{% endblock %}
-</body>
+{% include "header.html" %}
+
+<div class="line-separator"></div>
+<div class="header_sep"></div>
+<div>
+    {% if not session.logged_in %}
+    <a href="{{ url_for('auth.login') }}">log in</a>
+    {% else %}
+    <p class="inline"><a href="admin">admin</a></p> |
+    <a href="{{ url_for('auth.logout') }}">log out</a>
+    {% endif %}
+</div>
+
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="col-md-2 container left_menu">
+            {% include "menu.html" %}
+        </div>
+
+        <div class="col-md-7 content">
+
+            {% block content %}
+            {% endblock %} 
+
+        </div>
+
+        <div class="col-md-3">
+            <div class="container-fluid right_menu">
+                <h1>Dates</h1>
+                {% for post in dates %}
+                <b><span>{{ post.date }}</span><br>  </b>
+                <span>{{ post.description }}</span><br>
+                <br>
+                {% endfor %}
+            </div>
+            <br>
+            <div class="container-fluid right_menu">
+                <h1>News</h1>
+                {% for news_item in news %}
+                <b><span>{{ news_item.date }}</span><br></b>
+                <span>{{ news_item.content }}</span><br>
+                <br>
+                {% endfor %}
+                <br>
+            </div>
+
+        </div>
+    </div>
+</div>
+{% endblock %}
