--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,3 +1,4 @@
+<input type="button" id="changeLanguageButton" value="text"/>
 <div class="header-container">
     <div class="header">
         <img class="first" src="{{ url_for('static', filename='images/header/h1.png') }}">
@@ -22,3 +23,5 @@
         <img src="{{ url_for('static', filename='images/header/h10.png') }}">
     </div>
 </div>
+
+
