--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -17,17 +17,11 @@
     height: auto;
     padding-top: 10px;
     /*background: #BAE0DC;*/
-
 }
 
 .inline
 {
     display: inline;
-}
-
-.header_sep
-{
-    content: url("/static/images/header_sep.png");
 }
 
 .b-images
@@ -51,9 +45,9 @@
     transition: all 0.3s ease;
 
     margin: 10px 4px 10px 4px;
-    -webkit-box-shadow: 0px 0px 15px 0px rgba(52, 50, 109, 0.97);
-    -moz-box-shadow:    0px 0px 15px 0px rgba(52, 50, 109, 0.97);
-    box-shadow:         0px 0px 15px 0px rgba(52, 50, 109, 0.97);
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(52, 50, 109, 0.5);
+    -moz-box-shadow:    0px 0px 15px 0px rgba(52, 50, 109, 0.5);
+    box-shadow:         0px 0px 15px 0px rgba(52, 50, 109, 0.5);
 }
 
 .b-images img:hover
@@ -63,7 +57,6 @@
     -o-transform: scale(1.1);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
-
 }
 
 .wrapper 
@@ -73,4 +66,19 @@
     right:5px;
     text-align:right;
     display:block;
+}
+
+.banner
+{
+
+    margin: 50px 4px 10px 12px;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(52, 50, 109, 0.5);
+    -moz-box-shadow:    0px 0px 15px 0px rgba(52, 50, 109, 0.5);
+    box-shadow:         0px 0px 15px 0px rgba(52, 50, 109, 0.5);    
+}
+
+.right
+{
+    float:right;
+    clear:both;
 }
