--- a/app/static/css/slideshow.css
+++ b/app/static/css/slideshow.css
@@ -12,6 +12,7 @@
 }
  
 .header img {
+    max-height: 140px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -32,63 +33,6 @@
     box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
 }
 
-.first {
-    -webkit-animation: bannermove 70s linear infinite;
-       -moz-animation: bannermove 70s linear infinite;
-        -ms-animation: bannermove 70s linear infinite;
-         -o-animation: bannermove 70s linear infinite;
-            animation: bannermove 70s linear infinite;
-}
- 
-@keyframes bannermove {
- 0% {
-    margin-left: 0px;
- }
- 100% {
-    margin-left: -2125px;
- }
- 
-}
- 
-@-moz-keyframes bannermove {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
- 
-}
- 
-@-webkit-keyframes bannermove {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
- 
-}
- 
-@-ms-keyframes bannermove {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
- 
-}
- 
-@-o-keyframes bannermove {
- 0% {
-   margin-left: 0px;
- }
- 100% {
-   margin-left: -2125px;
- }
- 
-}
 
 .line-separator
 {
