--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,35 +15,37 @@
 {% include "header.html" %}
 
 <div class="line-separator"></div>
-<div class="header_sep"></div>
+<div class="after_header">
+    <a href="" id="changeLanguageButton">{{ _('ru') }}</a> | 
+    <span>PSI 2015 ERSHOV INFORMATICS CONFERENCE * June, 24, 2015, Kazan, Russia</span>
+</div>
+<br>
 <div>
     {% if not session.logged_in %}
-    <a href="{{ url_for('auth.login') }}">{{_('Log in')}}</a>
+        <a href="{{ url_for('auth.login') }}">{{_('Log in')}}</a>
     {% else %}
-    <p class="inline"><a href="admin">{{_('Admin Page')}}</a></p> |
-    <a href="{{ url_for('auth.logout') }}">{{_('Log out')}}</a>
+        <p class="inline"><a href="admin">{{_('Admin Page')}}</a></p> |
+        <a href="{{ url_for('auth.logout') }}">{{_('Log out')}}</a>
     {% endif %}
 </div>
-
 
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="col-md-2 container left_menu">
             {% include "menu.html" %}
+            <img class = "banner" src="{{ url_for('static', filename='images/banner.jpg') }}">
         </div>
 
         <div class="col-md-7 content">
-
             {% block content %}
             {% endblock %} 
-
         </div>
 
         <div class="col-md-3">
             <h1>{{ _('Dates') }}</h1>
             <div class="container-fluid right_menu">
                 {% for post in dates %}
-                <b><span>{{ post.date }}</span><br>  </b>
+                <b><span>{{ post.date.strftime('%Y-%m-%d %H:%M:%S') }}</span><br>  </b>
                 <span>{{ post.description }}</span><br>
                 <br>
                 {% endfor %}
@@ -52,7 +54,7 @@
             <h1>{{ _('News') }}</h1>
             <div class="container-fluid right_menu">
                 {% for news_item in news %}
-                <b><span>{{ news_item.date }}</span><br></b>
+                <b><span>{{ news_item.date.strftime('%Y-%m-%d %H:%M:%S') }}</span><br></b>
                 <span>{{ news_item.content }}</span><br>
                 <br>
                 {% endfor %}
