--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -32,10 +32,14 @@
 .b-images
 {
     display: inline;
+    width: 100%;
+    height: 100%;
 }
 
 .b-images img
 {
+    max-width: 33%;
+
     cursor: pointer;
 
     -webkit-transition: all 0.3s ease;
