--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
 
 {% block head %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='photoswipe/photoswipe.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='photoswipe/default-skin/default-skin.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/menu.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/slideshow.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/pictures.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='video-js/video-js.css') }}">
 
+
+<script src="{{ url_for('static', filename='photoswipe/photoswipe.min.js') }}"></script>
+<script src="{{ url_for('static', filename='photoswipe/photoswipe-ui-default.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script src="{{ url_for('static', filename='video-js/video.js') }}"></script>
 <script src="{{ url_for('static', filename='js/vjs.youtube.js') }}"></script>
+<script src="{{ url_for('static', filename='js/photo-swipe-initializer.js') }}"></script>
+
+
 {% endblock %}
 
 {% block body %}
