Added translation of menu items and added tags support for video and pictures

--- a/app/templates/pictures.html
+++ b/app/templates/pictures.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
-    <h1>Pictures</h1>
+    <h1>{{ _('Pictures') }}</h1>
 
     <div class="picture-gallery">
         {% for image in images %}
