--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,17 +1,37 @@
 <ul class="menu dropdown-menu">
-    <li><a href="/">Welcome</a></li>
+    <li><a href="/">{{ _('Welcome') }}</a></li>
 
-    <li><a href="{{ url_for('main.video') }}">Video</a></li>
-    <li class="dropdown-submenu"> <a href="{{ url_for('main.pictures') }}">Pictures</a>
-        <ul class="dropdown-menu">
-            <li><a href="#">All participants</a></li>
-            <li><a href="#">2014.06.24</a></li>
-            <li><a href="#">2014.06.25</a></li>
-            <li><a href="#">2014.06.26</a></li>
-        </ul>
+    <li {% if video_tags %} class="dropdown-submenu" {% endif %}>
+        <a href="{{ url_for('main.video') }}">{{ _('Video') }}</a>
+        {% if video_tags %} 
+            <ul class="dropdown-menu">
+                {% for tag in video_tags %}
+                    {% if locale == 'en' %}
+                        <li><a href="{{ url_for('main.video', tag=tag.get('en')) }}">{{ tag.get('en') }}</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('main.video', tag=tag.get('en')) }}">{{ tag.get('ru') }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endif %}
     </li>
-    <li><a href="http://www.easychair.org/smart-program/PSI2015/">Programme</a></li>
-    <li><a href="#">Keynote Speakers</a></li>
+
+    <li {% if picture_tags %} class="dropdown-submenu" {% endif %} > <a href="{{ url_for('main.pictures') }}">{{ _('Pictures') }}</a>
+        {% if picture_tags %} 
+            <ul class="dropdown-menu">
+                {% for tag in picture_tags %}
+                    {% if locale == 'en' %}
+                        <li><a href="{{ url_for('main.pictures', tag=tag.get('en')) }}">{{ tag.get('en') }}</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('main.pictures', tag=tag.get('en')) }}">{{ tag.get('ru') }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+        {% endif %}
+    </li>
+
+    <li><a href="http://www.easychair.org/smart-program/PSI2015/">{{ _('Programme') }}</a></li>
+    <li><a href="#">{{ _('Keynote Speakers') }}</a></li>
     <li><a href="#">Accepted Papers</a></li>
     <li><a href="#">Call for paper (PDF)</a></li>
 
