--- a/app/templates/video.html
+++ b/app/templates/video.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block content %}
-    <h1>Video</h1>
+    <h1>{{ _('Video') }}</h1>
 
     {% for video in videos %}
         <div class="b-images">
