--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -31,7 +31,7 @@
     </li>
 
     <li><a href="http://www.easychair.org/smart-program/PSI2015/">{{ _('Programme') }}</a></li>
-    <li><a href="#">{{ _('Keynote Speakers') }}</a></li>
+    <li><a href="{{ url_for('main.speakers') }}">{{ _('Keynote Speakers') }}</a></li>
     <li><a href="#">Accepted Papers</a></li>
     <li><a href="#">Call for paper (PDF)</a></li>
 
