--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header-container">
     <div class="header">
-        <img src="{{ url_for('static', filename='images/logo.jpg') }}">
+        <a href="/"><img src="{{ url_for('static', filename='images/logo.jpg') }}"></a>
         <img src="{{ url_for('static', filename='images/header/h1.png') }}">
         <img src="{{ url_for('static', filename='images/header/h2.png') }}">
         <img src="{{ url_for('static', filename='images/header/h3.png') }}">
