--- a/app/static/css/speakers.css
+++ b/app/static/css/speakers.css
@@ -2,6 +2,7 @@ div.keynote-line
 {
     margin-bottom: 40px;
     padding: 10px;
+    
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -32,6 +33,11 @@ div.keynote:hover {
 
 .keynote img 
 {
+  max-width: 220px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-top: 20px;
+  
   -webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
   -moz-box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
   box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
