Added style for logout

--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,7 +1,9 @@
 {% extends 'admin/master.html' %}
 
 {% block tail %}
-<form method="get" action="logout">
-    <button type="submit">Logout</button>
-</form>
+<div class="container">
+    <form method="get" action="logout">
+        <button class="btn btn-default" type="submit">Logout</button>
+    </form>
+</div>
 {% endblock %}
