--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 
 {% block tail %}
-<div class="container">
+<div class="container" align="center">
     <form method="get" action="logout">
         <button class="btn btn-default" type="submit">Logout</button>
     </form>
